--- a/MVC_Xiong/appsettings.json
+++ b/MVC_Xiong/appsettings.json
@@ -8,14 +8,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-1;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ContactsContext": "Server=(localdb)\\mssqllocaldb;Database=ContactsContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
 
-    /**
-    Azure connection string:
-  Server=tcp:lxiong.database.windows.net,1433;Initial Catalog=dmacc;Persist Security Info=False;User ID=lxiong;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;
-  local db connection string:
-    Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
-    **/
+    "MvcMovieContext": "Server=tcp:lxiong.database.windows.net,1433;Initial Catalog=movies;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+
+    "ContactsContext": "Server=tcp:cis174summer.database.windows.net,1433;Initial Catalog=WebApplication1_db;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+
+    "StudentContext": "Server=tcp:lxiong.database.windows.net,1433;InitialCatalog=Student;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" 
+
+
   }
+
 }
