--- a/MVC_Xiong/appsettings.json
+++ b/MVC_Xiong/appsettings.json
@@ -8,15 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-
-    "MvcMovieContext": "Server=tcp:lxiong.database.windows.net,1433;Initial Catalog=movies;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-
     "ContactsContext": "Server=tcp:cis174summer.database.windows.net,1433;Initial Catalog=WebApplication1_db;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-
+    "FlagContext": "Server=tcp:lxiong.database.windows.net,1433;Initial Catalog=Flags;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "MvcMovieContext": "Server=tcp:lxiong.database.windows.net,1433;Initial Catalog=movies;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "StudentContext": "Server=tcp:lxiong.database.windows.net,1433;InitialCatalog=Student;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-
-    "FlagContext": "Server=tcp:lxiong.database.windows.net,1433;Initial Catalog=Flags;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-
+    "TicketContext": "Server=tcp:lxiong.database.windows.net,1433;Initial Catalog=Ticket;Persist Security Info=False;User ID=lxiong;Password=Summer50317;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 
 }
